# asset-manager

./: .gitmodules  CMakeLists.txt  imgui.ini
src/: common.cpp  common.h  main.cpp  shader_compiler.cpp
src/animation/: animation.cpp  animation.h
src/assets/: image.cpp  image.h  model.cpp  model.h
src/core/window/: window.cpp  window.h
src/files/: files.cpp  files.h
src/shaders/: default.frag  default.frag.h  default.vert  default.vert.h
